@@ -1564,7 +1564,16 @@ pkl_type_append_to (pkl_ast_node type, int use_given_name,
         if (PKL_AST_TYPE_S_UNION_P (type))
           sb_append (buffer, "union {");
         else
-          sb_append (buffer, "struct {");
+          {
+            if (PKL_AST_TYPE_S_ITYPE (type))
+              {
+                sb_append (buffer, "struct ");
+                pkl_type_append_to (PKL_AST_TYPE_S_ITYPE (type), 0, buffer);
+                sb_append (buffer, " {");
+              }
+            else
+              sb_append (buffer, "struct {");
+          }
 
         for (t = PKL_AST_TYPE_S_ELEMS (type); t;
              t = PKL_AST_CHAIN (t))
