@@ -1,5 +1,10 @@
 2024-03-31  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-ast.c (pkl_type_append_to): Include itype in
+	integral struct type string representations.
+
+2024-03-31  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-pass.c (pkl_do_pass_1): Do not increase reference
 	counter automatically in substituted PKL_PASS_NODE.  Let the
 	handlers do it instead.
